后台配送区域编辑修改提交，新增o2o的配送方式

--- a/statics/css/merchant_shipping.css
+++ b/statics/css/merchant_shipping.css
@@ -8,6 +8,12 @@
 	padding-top: 2px !important;
 	height:30px;
 }
+.time-picker {
+	margin-bottom:5px;
+}
+.time-picker .form-control {
+	display : unset;
+}
 
 
 
