--- a/statics/css/merchant_express.css
+++ b/statics/css/merchant_express.css
@@ -58,3 +58,7 @@
 .info-shipping-item{border-bottom:1px solid #ddd;overflow:hidden}
 .info-shipping-left{overflow:hidden;-webkit-padding-start:10px;padding-top:15px;margin-bottom:15px;width:85%;float:left;line-height:25px}
 .info-shipping-right{float:right;margin-top:17px;margin-right:15px}
+.time-picker .form-control{display:inline-block}
+#addShipping .controls{padding-left:0;}
+#addShipping .time-picker{margin-bottom:5px;}
+#addShipping .col-lg-6.help-block{padding-left:0;margin-bottom:0;}
