增加框内提示

--- a/statics/css/merchant_express.css
+++ b/statics/css/merchant_express.css
@@ -62,3 +62,4 @@
 #addShipping .controls{padding-left:0;}
 #addShipping .time-picker{margin-bottom:5px;}
 #addShipping .col-lg-6.help-block{padding-left:0;margin-bottom:0;}
+#addShipping .staticalert {width:98%;margin:10px auto;}
