--- a/statics/css/merchant_express.css
+++ b/statics/css/merchant_express.css
@@ -38,7 +38,7 @@
 .template-info-content{overflow:hidden}
 .template-info-content input{display:inline-block;width:80px}
 .template-info-content .content-area{display:none}
-.template-info-content .content-area-list{overflow:hidden;-webkit-padding-start:10px;padding-top:15px;margin-bottom:5px;width:85%;float:left;display:none}
+.template-info-content .content-area-list{overflow:hidden;-webkit-padding-start:15px;padding-top:15px;margin-bottom:5px;width:85%;float:left;display:none;-moz-padding-start:15px;}
 .template-info-content .add_area{margin:10px 0 10px 10px}
 .template-info-content .add_shipping{margin:10px 0 10px 10px}
 .template-info-content .content-shipping{padding:10px;border-radius:4px;background-color:#F2F2F2;margin:10px}
@@ -50,13 +50,13 @@
 
 #chooseRegion .modal-dialog{width:1000px}
 #chooseRegion .ms-shipping .ms-selectable{width:25%}
-#chooseRegion .select-region{overflow:hidden;margin-bottom:10px;-webkit-padding-start:0;margin-top:10px}
+#chooseRegion .select-region{overflow:hidden;margin-bottom:15px;-webkit-padding-start:0;margin-top:10px;-moz-padding-start:0;}
 #chooseRegion .select-region li{float:left;list-style:none;border-color:#3498db;background-color:#3498db;border:1px solid #3498db;color:#fff;padding:2px 23px 2px 10px;border-radius:4px;position:relative;margin-right:10px;margin-bottom:10px}
 #chooseRegion .select-region li:first-child{margin-left:0}
 #chooseRegion .select-region li .delete_area{font-size:19px;position:absolute;right:5px;top:-3px;cursor:pointer}
 
 .info-shipping-item{border-bottom:1px solid #ddd;overflow:hidden}
-.info-shipping-left{overflow:hidden;-webkit-padding-start:10px;padding-top:15px;margin-bottom:15px;width:85%;float:left;line-height:25px}
+.info-shipping-left{overflow:hidden;-webkit-padding-start:15px;padding-top:15px;margin-bottom:15px;width:85%;float:left;line-height:25px;-moz-padding-start:15px;}
 .info-shipping-right{float:right;margin-top:17px;margin-right:15px}
 .time-picker .form-control{display:inline-block}
 #addShipping .controls{padding-left:0;}
